--- a/app/views/dj_mon/dj_reports/index.html.haml
+++ b/app/views/dj_mon/dj_reports/index.html.haml
@@ -15,10 +15,10 @@
     = link_to "Active", "#active", "data-toggle" => "tab"
 
 .tab-content
-  .tab-pane#all.active{ 'data-url'   => all_dj_reports_url(protocol: 'https') }
-  .tab-pane#failed{ 'data-url'=> failed_dj_reports_url(protocol: 'https') }
-  .tab-pane#active{ 'data-url'=> active_dj_reports_url(protocol: 'https') }
-  .tab-pane#queued{ 'data-url'=> queued_dj_reports_url(protocol: 'https') }
+  .tab-pane#all.active{ 'data-url'   => all_dj_reports_url(protocol: request_protocol) }
+  .tab-pane#failed{ 'data-url'=> failed_dj_reports_url(protocol: request_protocol) }
+  .tab-pane#active{ 'data-url'=> active_dj_reports_url(protocol: request_protocol) }
+  .tab-pane#queued{ 'data-url'=> queued_dj_reports_url(protocol: request_protocol) }
 
 %script#dj_reports_template{ :type=> "text/x-handlebars-template" }
   %table.table.table-striped#jobs-table
